# cmake-example

./: CMakeLists.txt  README.md
tests/: test_case.cpp
